# PIDVisualizer

./: .gitignore  CMakeLists.txt  README.md
.qtcreator/: CMakeLists.txt.user.3714fc6  CMakeLists.txt.user.5b11249  CMakeLists.txt.user.fde1001
PIDemulator/: model.py
include/core/: Constants.h  circularbuffer.h  datapoint.h  fft.h  processmemory.h  ringbuffer.h  threadsaferingbuffer.h
include/filters/: exponentialfilter.h  filterbase.h  ifilter.h  kalmanfilter.h  medianfilter.h  movingaveragefilter.h
include/network/: protocolparser.h  udpreceiver.h  udpsender.h
include/processing/: dataprocessor.h  filterthread.h
include/ui/: cyclictargetcontroller.h  graphmanager.h  mainwindow.h  networkcontroller.h  statusbarmanager.h
src/: main.cpp
src/core/: fft.cpp  processmemory.cpp
src/filters/: exponentialfilter.cpp  filterbase.cpp  kalmanfilter.cpp  medianfilter.cpp  movingaveragefilter.cpp
src/network/: protocolparser.cpp  udpreceiver.cpp  udpsender.cpp
src/processing/: dataprocessor.cpp  filterthread.cpp
src/ui/: cyclictargetcontroller.cpp  graphmanager.cpp  mainwindow.cpp  mainwindow.ui  networkcontroller.cpp  statusbarmanager.cpp
